# ACCDOA-libtorch

./: .clangd  .gitignore  ACCDOA-libtorch.cpp  ACCDOA-libtorch.h  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.ps1  config.h  deps.ps1  features.cpp  features.h  inspect_trial.py  libtorch-install.ps1  libtorch.ps1  libtorch.sh  main.cpp  test.py  test_generate.py  vcpkg.json  z5-install.ps1
audio/: audio.h  features.h  fsm.h
include/: audio.h  config.h  dataset.h  features.h  fsm.h  model.h
model/: model.h
src/: gen_main.cpp  generate.h  infer_main.cpp  inference.h  train.h  train_main.cpp
